// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueas en <GifGrid /> debe de mostrar items cuando se cargan images useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    one Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="324324"
      key="324324"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Prueas en <GifGrid /> debe de mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    one Punch
  </h3>
  <p
    className="loading animate__animated flash"
  >
    Cargando ...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
